--- a/chartjs/templates/memfree.html
+++ b/chartjs/templates/memfree.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>nofiles - hxat performance</title>
+    <title>memfree - hxat performance</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <style>
@@ -22,6 +22,7 @@
         var barChartData = {
             labels: {{ dat.x_labels }},
             datasets: [{
+            /*
                 label: 'nginx',
                 backgroundColor: 'rgba(255, 99, 132, 1)',
                 data: {{ dat.nginx_nofiles }},
@@ -34,10 +35,10 @@
                 backgroundColor: 'rgba(255, 206, 86, 1)',
                 data: {{ dat.total_nofiles }},
             /*}, {
-                label: 'total_mem_used',
-                backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                data: {{ dat.total_mem_used }},
             */
+                label: 'total_mem_free',
+                backgroundColor: 'rgba(54, 162, 235, 1)',
+                data: {{ dat.total_mem_free }},
             }
             ]
 
@@ -50,13 +51,14 @@
                 options: {
                     title: {
                         display: true,
-                        text: 'nofiles'
+                        text: 'memfree'
                     },
                     tooltips: {
                         mode: 'index',
                         intersect: false
                     },
                     responsive: true,
+                    /*
                     scales: {
                         xAxes: [{
                             stacked: true,
@@ -65,6 +67,7 @@
                             stacked: true
                         }]
                     }
+                    */
                 }
             });
         };
